Trisquel build dockers
* Add the build of DCMTK (needed for older systems)

* Fix OpenCV dependencies

* Disable the build of popsift and cctag when no CUDA is available

* Update the "build" CUDA version

* Add some build facilities on Trisquel (Docker files and scripts)

* Add the hash of assimp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ option(AV_BUILD_CUDA "Enable building an embedded Cuda" OFF)
 option(AV_BUILD_ZLIB "Enable building an embedded ZLIB" ON)
 option(AV_BUILD_ASSIMP "Enable building an embedded ASSIMP" ON)
 option(AV_BUILD_TIFF "Enable building an embedded Tiff" ON)
+option(AV_BUILD_DCMTK "Enable building an embedded DCMTK" ON)
 option(AV_BUILD_JPEG "Enable building an embedded Jpeg" ON)
 option(AV_BUILD_PNG "Enable building an embedded Png" ON)
 option(AV_BUILD_LIBRAW "Enable building an embedded libraw" ON)
@@ -50,6 +51,17 @@ if(CMAKE_BUILD_TYPE MATCHES Release)
     set(CMAKE_INSTALL_DO_STRIP TRUE)
 endif()
 
+if(NOT AV_USE_CUDA)
+    message(STATUS "AliceVision is told not to use CUDA")
+    find_package(CUDA 7.0)
+    if(NOT CUDA_FOUND AND NOT AV_BUILD_CUDA)
+        message(STATUS "CUDA not found and will not be built")
+        message(STATUS "Disabling the build of popsift and cctag")
+        set(AV_BUILD_POPSIFT OFF)
+        set(AV_BUILD_CCTAG OFF)
+    endif()
+endif()
+
 message(STATUS "----------------------------------------")
 message(STATUS "ALICEVISION_BUILD_DEPENDENCIES: ${ALICEVISION_BUILD_DEPENDENCIES}")
 message(STATUS "ALICEVISION_BUILD_TESTS: ${ALICEVISION_BUILD_TESTS}")
@@ -58,6 +70,7 @@ message(STATUS "AV_BUILD_CUDA: ${AV_BUILD_CUDA}")
 message(STATUS "AV_BUILD_ZLIB: ${AV_BUILD_ZLIB}")
 message(STATUS "AV_BUILD_ASSIMP: ${AV_BUILD_ASSIMP}")
 message(STATUS "AV_BUILD_TIFF: ${AV_BUILD_TIFF}")
+message(STATUS "AV_BUILD_DCMTK: ${AV_BUILD_DCMTK}")
 message(STATUS "AV_BUILD_JPEG: ${AV_BUILD_JPEG}")
 message(STATUS "AV_BUILD_PNG: ${AV_BUILD_PNG}")
 message(STATUS "AV_BUILD_LIBRAW: ${AV_BUILD_LIBRAW}")
@@ -129,6 +142,7 @@ set(ASSIMP_AV_VERSION 5.0.1)
 set(ASSIMP_FILENAME v${ASSIMP_AV_VERSION}.tar.gz)
 ExternalProject_Add(${ASSIMP_TARGET}
       URL https://github.com/assimp/assimp/archive/refs/tags/${ASSIMP_FILENAME}
+      URL_HASH MD5=eb7b7385a5c3194ab46d7f869d7ac6cf
       DOWNLOAD_DIR ${BUILD_DIR}/download/assimp
       PREFIX ${BUILD_DIR}
       BUILD_IN_SOURCE 0
@@ -173,7 +187,9 @@ if(AV_USE_CUDA AND AV_BUILD_CUDA)
 set(CUDA_TARGET cuda)
 ExternalProject_Add(${CUDA_TARGET}
        # URL https://developer.nvidia.com/compute/cuda/8.0/Prod2/local_installers/cuda_8.0.61_375.26_linux-run
-       URL https://developer.nvidia.com/compute/cuda/9.2/Prod/local_installers/cuda_9.2.88_396.26_linux
+       URL https://developer.nvidia.com/compute/cuda/9.2/Prod/local_installers/cuda_9.2.148_396.37_linux.run
+       URL_HASH MD5=8303cdf46904e6dea8d5d641b0b46f0d
+       DOWNLOAD_DIR ${BUILD_DIR}/download/cuda
        DOWNLOAD_NO_EXTRACT 1
        PREFIX ${BUILD_DIR}
        BUILD_IN_SOURCE 0
@@ -184,7 +200,7 @@ ExternalProject_Add(${CUDA_TARGET}
        INSTALL_DIR ${CMAKE_INSTALL_PREFIX}
        CONFIGURE_COMMAND ""
        BUILD_COMMAND ""
-       INSTALL_COMMAND sh ${BUILD_DIR}/src/cuda_9.2.88_396.26_linux --silent --no-opengl-libs --toolkit --toolkitpath=<INSTALL_DIR>
+       INSTALL_COMMAND sh ${BUILD_DIR}/download/cuda/cuda_9.2.148_396.37_linux.run --silent --no-opengl-libs --toolkit --toolkitpath=<INSTALL_DIR>
        )
 set(CUDA_CUDART_LIBRARY "")
 set(CUDA_CMAKE_FLAGS -DCUDA_TOOLKIT_ROOT_DIR=${CMAKE_INSTALL_PREFIX})
@@ -436,6 +452,31 @@ ExternalProject_Add(${PNG_TARGET}
 SET(PNG_CMAKE_FLAGS -DPNG_LIBRARY=${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/libpng.so -DPNG_PNG_INCLUDE_DIR=${CMAKE_INSTALL_PREFIX}/include)
 endif()
 
+# Add DCMTK
+if(AV_BUILD_DCMTK)
+set(DCMTK_TARGET dcmtk)
+ExternalProject_Add(${DCMTK_TARGET}
+        URL https://github.com/DCMTK/dcmtk/archive/refs/tags/DCMTK-3.6.6.tar.gz
+        URL_HASH MD5=a9682030c95caea67e32c824ccf3de07
+        DOWNLOAD_DIR ${BUILD_DIR}/download/dcmtk
+        PREFIX ${BUILD_DIR}
+        BUILD_IN_SOURCE 0
+        BUILD_ALWAYS 0
+        UPDATE_COMMAND ""
+        SOURCE_DIR ${CMAKE_CURRENT_BINARY_DIR}/dcmtk
+        BINARY_DIR ${BUILD_DIR}/dcmtk_build
+        INSTALL_DIR ${CMAKE_INSTALL_PREFIX}
+        CONFIGURE_COMMAND ${CMAKE_COMMAND} ${CMAKE_CORE_BUILD_FLAGS} ${TIFF_CMAKE_FLAGS} -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR> <SOURCE_DIR>
+        BUILD_COMMAND $(MAKE)
+        DEPENDS ${ZLIB_TARGET} ${PNG_TARGET} ${TIFF_TARGET}
+       )
+   SET(DCMTK_CMAKE_FLAGS -DDCMTK_ROOT=${CMAKE_INSTALL_PREFIX} -DDCMTK_LIBRARY_PATH=${CMAKE_INSTALL_PREFIX}/lib -DDCMTK_INCLUDE_PATH=${CMAKE_INSTALL_PREFIX}/include)
+   SET(DCMTK_MODULES ofstd;oflog;dcmdata;dcmimgle;dcmimage;dcmjpeg;dcmjpls;dcmtls;dcmnet;dcmsr;dcmsign;dcmwlm;dcmqrdb;dcmpstat;dcmrt;dcmiod;dcmfg;dcmseg;dcmtract;dcmpmap;dcmect)
+   foreach(module IN LISTS DCMTK_MODULES)
+       string(APPEND DCMTK_CMAKE_FLAGS " -DDCMTK_${module}_LIB=${CMAKE_INSTALL_PREFIX}/lib/lib${module}.so")
+   endforeach()
+endif()
+
 if(AV_BUILD_JPEG)
 set(JPEG_TARGET turbojpeg)
 # Add turbojpeg
@@ -614,7 +655,7 @@ ExternalProject_Add(${OPENIMAGEIO_TARGET}
             -DBOOST_ROOT=${CMAKE_INSTALL_PREFIX} -DOIIO_BUILD_TESTS:BOOL=OFF
             -DILMBASE_HOME=${CMAKE_INSTALL_PREFIX}
             -DOPENEXR_HOME=${CMAKE_INSTALL_PREFIX}
-            ${TIFF_CMAKE_FLAGS} ${ZLIB_CMAKE_FLAGS} ${PNG_CMAKE_FLAGS} ${JPEG_CMAKE_FLAGS} ${LIBRAW_CMAKE_FLAGS} ${OPENEXR_CMAKE_FLAGS}
+            ${TIFF_CMAKE_FLAGS} ${ZLIB_CMAKE_FLAGS} ${PNG_CMAKE_FLAGS} ${JPEG_CMAKE_FLAGS} ${LIBRAW_CMAKE_FLAGS} ${OPENEXR_CMAKE_FLAGS} ${DCMTK_CMAKE_FLAGS}
             -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR> <SOURCE_DIR>
             -DSTOP_ON_WARNING=OFF
             -DUSE_FFMPEG=${AV_BUILD_FFMPEG}
@@ -626,7 +667,7 @@ ExternalProject_Add(${OPENIMAGEIO_TARGET}
             -DUSE_PYTHON=OFF -DUSE_OPENCV=OFF -DUSE_OPENGL=OFF
             # TODO: build with libheif
       BUILD_COMMAND $(MAKE)
-      DEPENDS ${BOOST_TARGET} ${OPENEXR_TARGET} ${TIFF_TARGET} ${PNG_TARGET} ${JPEG_TARGET} ${LIBRAW_TARGET} ${ZLIB_TARGET} ${FFMPEG_TARGET}
+      DEPENDS ${BOOST_TARGET} ${OPENEXR_TARGET} ${TIFF_TARGET} ${PNG_TARGET} ${JPEG_TARGET} ${LIBRAW_TARGET} ${ZLIB_TARGET} ${FFMPEG_TARGET} ${DCMTK_TARGET}
       )
 # TODO: openjpeg
 # -DOPENJPEG_INCLUDE_DIR=$OPENJPEG_INCLUDE_DIR/openjpeg-2.0 -DOPENJPEG_OPENJP2_LIBRARIES=$OPENJPEG_OPENJP2_LIBRARIES
@@ -701,6 +742,7 @@ ExternalProject_Add(${OPENCV_TARGET}
     -DBUILD_LIST=core,improc,photo,objdetect,video,imgcodecs,videoio,features2d,xfeatures2d,version,mcc
     <SOURCE_DIR>
   BUILD_COMMAND $(MAKE)
+  DEPENDS ${TBB_TARGET} ${ZLIB_TARGET} ${PNG_TARGET} ${JPEG_TARGET} ${TIFF_TARGET} ${LIBRAW_TARGET}
 )
 # set(OPENCV_CMAKE_FLAGS -DOpenCV_DIR=${BUILD_DIR}/opencv_install -DCMAKE_PREFIX_PATH=${BUILD_DIR}/opencv_install)
 set(OPENCV_CMAKE_FLAGS -DOpenCV_DIR=${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/cmake/opencv4 -DOPENCV_DIR=${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/cmake/opencv4)
